# caffeine-build

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SKILL.md  summary.md
.github/workflows/: ci.yml  deploy-docs.yml  docker-publish.yml  reusable-ci.yml  reusable-deploy-docs.yml  version-bump.yml
cmake/: CaffeineMacros.cmake
cmake/ports/stm32/stm32f4/: stm32f407vgtx.cmake  stm32f417vgtx.cmake  stm32f4_base.cmake
cmake/presets/: base.json
cmake/presets/gigadevice/: gd32v.json
cmake/presets/mock/: tests.json
cmake/presets/posix/: linux.json
cmake/presets/stm32/: stm32f4.json
cmake/presets/template/: compliance.json
cmake/toolchains/: aarch64-linux.cmake  arm-gcc.cmake  riscv-gcc.cmake
config/coding/: .clang-format  .clang-tidy  cppcheck-suppressions.txt
scripts/: build.py  build.sh  caffeine_utils.py  ci.py  ci.sh  local_dev.py  run_local_ci.py
